# RooNAA6

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  config.json.example  config.toml.example  naa6-audio-bridge.service  roon-metadata-extension.service
.kiro/specs/roon-naa6-bridge/: .config.kiro  design.md  requirements.md  tasks.md
alsa-loopback/etc/modprobe.d/: snd-aloop.conf
alsa-loopback/etc/modules-load.d/: snd-aloop.conf
audio-bridge/: Cargo.toml
audio-bridge/src/: alsa_capture.rs  backpressure.rs  config_reader.rs  control_client.rs  control_server.rs  format_detector.rs  http_server.rs  ipc_listener.rs  main.rs  naa6_client.rs  session.rs  shutdown.rs  types.rs  xml_protocol.rs
debian/: roonaa6.service
docs/superpowers/plans/: 2026-04-03-transparent-proxy.md  2026-04-05-rust-naa-proxy.md
docs/superpowers/specs/: 2026-04-03-transparent-proxy-design.md  2026-04-04-merge-proxy-services-design.md  2026-04-05-rust-naa-proxy-design.md
metadata-extension/: package-lock.json  package.json  tsconfig.json
metadata-extension/src/: ConfigReader.test.ts  ConfigReader.ts  Logger.ts  MetadataForwarder.test.ts  MetadataForwarder.ts  RoonExtension.ts  ShutdownHandler.test.ts  ShutdownHandler.ts  index.ts  types.ts
proxy/: experiment_metadata.py  experiment_naa.py  naa_metadata_format.txt  naa_proxy.py  roon_metadata.py  test_transparent_proxy.py  transparent_proxy.py
python_prototype/: capture_proxy.py  test_naa_proxy.py
src/: config.rs  discovery.rs  frame.rs  iptables.rs  main.rs  metadata.rs  proxy.rs  roon.rs  web.rs  web_page.html
src/tests/: discovery.rs  frame.rs  frame_ops.rs  frame_pos.rs  metadata.rs  mod.rs  proxy.rs  roon.rs
