[package]
name = "naa6-audio-bridge"
version = "0.1.0"
edition = "2021"
description = "Bridges ALSA loopback audio to HQPlayer via the NAA 6 protocol"

[[bin]]
name = "naa6-audio-bridge"
path = "src/main.rs"

[dependencies]
alsa = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
signal-hook = "0.3"

[dev-dependencies]
proptest = "1"
